--- a/refs.bib
+++ b/refs.bib
@@ -354,3 +354,172 @@ abstract = {There are several common conventions in use by the gravitational-wav
    month=apr, pages={028–028} 
 }
 
+@article{vanDam:1970vg,
+    author = "van Dam, H. and Veltman, M. J. G.",
+    title = "{Massive and massless Yang-Mills and gravitational fields}",
+    doi = "10.1016/0550-3213(70)90416-5",
+    journal = "Nucl. Phys. B",
+    volume = "22",
+    pages = "397--411",
+    year = "1970"
+}
+
+@article{Zakharov:1970cc,
+    author = "Zakharov, V. I.",
+    title = "{Linearized gravitation theory and the graviton mass}",
+    journal = "JETP Lett.",
+    volume = "12",
+    pages = "312",
+    year = "1970"
+}
+
+@article{Vainshtein:1972sx,
+    author = "Vainshtein, A. I.",
+    title = "{To the problem of nonvanishing gravitation mass}",
+    doi = "10.1016/0370-2693(72)90147-5",
+    journal = "Phys. Lett. B",
+    volume = "39",
+    pages = "393--394",
+    year = "1972"
+}
+
+@article{Boulware:1972yco,
+    author = "Boulware, D. G. and Deser, Stanley",
+    title = "{Can gravitation have a finite range?}",
+    doi = "10.1103/PhysRevD.6.3368",
+    journal = "Phys. Rev. D",
+    volume = "6",
+    pages = "3368--3382",
+    year = "1972"
+}
+
+@article{Dubovsky:2004sg,
+    author = "Dubovsky, S. L.",
+    title = "{Phases of massive gravity}",
+    eprint = "hep-th/0409124",
+    archivePrefix = "arXiv",
+    doi = "10.1088/1126-6708/2004/10/076",
+    journal = "JHEP",
+    volume = "10",
+    pages = "076",
+    year = "2004"
+}
+
+@article{deRham:2010ik,
+  title = {Generalization of the Fierz-Pauli action},
+  author = {de Rham, Claudia and Gabadadze, Gregory},
+  journal = {Phys. Rev. D},
+  volume = {82},
+  issue = {4},
+  pages = {044020},
+  numpages = {9},
+  year = {2010},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.82.044020},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.82.044020}
+}
+
+@article{deRham:2010kj,
+    author = "de Rham, Claudia and Gabadadze, Gregory and Tolley, Andrew J.",
+    title = "{Resummation of Massive Gravity}",
+    eprint = "1011.1232",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1103/PhysRevLett.106.231101",
+    journal = "Phys. Rev. Lett.",
+    volume = "106",
+    pages = "231101",
+    year = "2011"
+}
+
+@article{Arkani-Hamed:2003pdi,
+    author = "Arkani-Hamed, Nima and Cheng, Hsin-Chia and Luty, Markus A. and Mukohyama, Shinji",
+    title = "{Ghost condensation and a consistent infrared modification of gravity}",
+    eprint = "hep-th/0312099",
+    archivePrefix = "arXiv",
+    reportNumber = "HUTP-03-A081, UMD-PPP-04-012",
+    doi = "10.1088/1126-6708/2004/05/074",
+    journal = "JHEP",
+    volume = "05",
+    pages = "074",
+    year = "2004"
+}
+
+@article{Rubakov:2004eb,
+    author = "Rubakov, V. A.",
+    title = "{Lorentz-violating graviton masses: Getting around ghosts, low strong coupling scale and VDVZ discontinuity}",
+    eprint = "hep-th/0407104",
+    archivePrefix = "arXiv",
+    journal="",
+    reportNumber = "INR-TH-39-2004",
+    month = "7",
+    year = "2004"
+}
+
+@article{Blas:2009my,
+    author = "Blas, D. and Comelli, D. and Nesti, F. and Pilo, L.",
+    title = "{Lorentz Breaking Massive Gravity in Curved Space}",
+    eprint = "0905.1699",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1103/PhysRevD.80.044025",
+    journal = "Phys. Rev. D",
+    volume = "80",
+    pages = "044025",
+    year = "2009"
+}
+
+@article{Rubakov:2008nh,
+    author = "Rubakov, V. A. and Tinyakov, P. G.",
+    title = "{Infrared-modified gravities and massive gravitons}",
+    eprint = "0802.4379",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    reportNumber = "ULB-TH-08-07",
+    doi = "10.1070/PU2008v051n08ABEH006600",
+    journal = "Phys. Usp.",
+    volume = "51",
+    pages = "759--792",
+    year = "2008"
+}
+
+@article{Blas:2007zz,
+    author = "Blas, D. and Deffayet, C. and Garriga, J.",
+    title = "{Bigravity and Lorentz-violating Massive Gravity}",
+    eprint = "0705.1982",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1103/PhysRevD.76.104036",
+    journal = "Phys. Rev. D",
+    volume = "76",
+    pages = "104036",
+    year = "2007"
+}
+
+@article{Comelli:2013txa,
+    author = "Comelli, Denis and Nesti, Fabrizio and Pilo, Luigi",
+    title = "{Massive gravity: a General Analysis}",
+    eprint = "1305.0236",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP07(2013)161",
+    journal = "JHEP",
+    volume = "07",
+    pages = "161",
+    year = "2013"
+}
+
+@article{Langlois:2014jba,
+    author = "Langlois, David and Mukohyama, Shinji and Namba, Ryo and Naruko, Atsushi",
+    title = "{Cosmology in rotation-invariant massive gravity with non-trivial fiducial metric}",
+    eprint = "1405.0358",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1088/0264-9381/31/17/175003",
+    journal = "Class. Quant. Grav.",
+    volume = "31",
+    pages = "175003",
+    year = "2014"
+}
+
