--- a/scrap_I_might_need.tex
+++ b/scrap_I_might_need.tex
@@ -60,3 +60,48 @@ Thus, we see that the power spectrum takes on the form
     \mathcal{P}(\omega_0)  = \frac{\omega_0 a_k^3 \omega_k}{k^2 a_0} P_{prim}(k)\ .
     \end{multlined}
 \end{equation}
+
+
+
+
+\onecolumngrid
+\begin{figure*}
+\includegraphics[width=\textwidth]{fig/fig8.pdf} 
+\caption{GWB produced by the SFM model. We show the $1\sigma$, $2\sigma$, and $3\sigma$ posterior medians for NG15, in darker to lighter orange respectively. The black dotted line is the GWB spectrum produced by an astrophysical population of inspiraling supermassive black hole binaries with the parameters detailed in Eq.\ A1 of Ref.\ \cite{Afzal:2023}. The red curve is the GWB spectra fitted to the $1\sigma$ posterior, the blue curve is fitted to the $2\sigma$ posterior, and the green curve is fitted to the $3\sigma$ posterior. Here, $H_{14}$ is taken to be $H_{\inf} / 10^{14} \GeV$}
+\label{fig:GWB}
+\end{figure*}
+\twocolumngrid
+
+
+\begin{figure}[ht!]
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.82\linewidth]{fig/fig4a.pdf}  
+  \label{fig:contour-a}
+\end{subfigure}
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.82\linewidth]{fig/fig4b.pdf}  
+  \label{fig:contour-b}
+\end{subfigure}
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.82\linewidth]{fig/fig4c.pdf}  
+  \label{fig:contour-c}
+\end{subfigure}
+\caption{We plot $\Omega_{\text{GW},0}$ as a function of $f$ and $M$ (top), $\tau_m$ (middle), and $H_{\inf}$ (bottom). The frequency ranges from the scale corresponding to matter-radiation inequality ($\sim 3\times10^{-16}$ Hz) to the inflationary UV cutoff ($\sim 2\times 10^8\left(\frac{H_{\inf}}{10^{14} \GeV}\right)^{1/2}$ Hz \cite{Fujita:2018}).} 
+\label{fig:contours}
+\end{figure}
+
+
+\begin{figure}[ht]
+    \includegraphics[width=\linewidth]{fig/fig9.pdf}
+    \caption{Posterior probability distribution of the GWB amplitude and spectral index for the NANOGrav data. The value $\gamma_\text{GW}$ = 13/3 (dashed black line) represents the expected SMBHB spectrum. The amplitude is referenced to $f_{\text ref}$ = 1 yr$^{-1}$. The red, blue, and green curves represent the GWB spectra fitted to the $1\sigma$, $2\sigma$, and $3\sigma$ posterior of the signal.}
+    \label{fig:amp_spec}
+\end{figure}
+
+\begin{figure}[ht!]
+    \includegraphics[width=\linewidth]{fig/fig7.pdf}
+    \caption{The energy densities in Fig.\ \ref{fig:GWB} plotted over the whole frequency range specified in Fig.\ \ref{fig:contours}. The red, blue, and green curves correspond to the energy densities of the same color in Fig.\ \ref{fig:GWB}. The turquoise curve below the energy densities is the sensitivity curve for NANOGrav. The suppression takes place right before the energy density surpasses the BBN bound.}
+    \label{fig:supp}
+\end{figure}
