--- a/main.tex
+++ b/main.tex
@@ -422,7 +422,7 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 \begin{document}
 
 % \title{Constraining Time Dependent Massive Gravity with the NANOGrav 15-Year Data Set}
-\title{Reproducing the Stochastic Gravitational Wave Background from the NANOGrav 15-Year Data Set with Massive Gravity}
+\title{Using Time Dependent Massive Gravity to Reproduce the Stochastic Gravitational Wave Background from the NANOGrav 15-Year Data Set}s
 
 \date{\today}
 \preprint{N/A}
@@ -441,35 +441,36 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 \affiliation{School of Natural Sciences and Medicine, Ilia State University, 0194 Tbilisi, Georgia}
 \affiliation{Abastumani Astrophysical Observatory, Tbilisi, GE-0179, Georgia}
 
-\author{Jacob~Magallanes}\textbf{}
+\author{Jacob~Magallanes}
 \email{jmagalla@andrew.cmu.edu}
 \affiliation{Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
 
 \begin{abstract}
-Convincing evidence of a stochastic gravitational wave background has been found by the NANOGrav collaboration in the 15-Year data set. From this signal, we can evaluate the possibility of its source being from the early universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider a time dependent model of massive gravity, and compare their energy spectra with the signals from the NANOGrav data. We then place bounds on the mass of the gravitons and bounds on the rate of inflation. We show that primordial gravitational waves amplified by time dependent massive gravity is able to reproduce the data within 1-3 $\sigma$ deviation. However, a suppression mechanism for high frequency modes has to be introduced to obey the BBN bounds. 
+Convincing evidence of a stochastic gravitational wave background has been found by the NANOGrav collaboration in the 15-Year data set. From this signal, we can evaluate the possibility of its source being from the early universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider a time dependent model of the minimal theory of massive gravity, and find values of the graviton mass and Hubble rate of inflation that amplify the energy spectra of primordial gravitational waves sufficiently to reproduce the signal from the NANOGrav data within 1-3 standard deviation. However, a suppression mechanism for high frequency modes has to be introduced to obey the BBN bounds. 
 \end{abstract}
 
 \maketitle
-% mention Vdgz discontinuity, and reference other theories of ghost free gravities gabadaze, say "look, hthe reviews". cite trodden 
 \section{Introduction}
-The discovery of a stochastic gravitational wave background (SGWB) based on the data from 15 years of observation of pulsars by the North American Nanohertz Observatory for Gravitational Waves (NANOGrav) collaboration \cite{Agazie:2023} opened up an observational window into looking for signs of new physics \cite{Afzal:2023}. We want to investigate alternatives to the astrophysical explanation, in order to potentially address the shortcomings of our current prevailing theories of General Relativity (GR) and the Standard Model. Thus, we consider the following cosmological scenario that leads to gravitational wave generation in the frequency ranges accessible by NANOGrav. 
+Evidence supporting the existence of a stochastic gravitational wave background (SGWB) has been found by 15 years of observation of pulsars by the North American Nanohertz Observatory for Gravitational Waves (NANOGrav) collaboration \cite{Agazie:2023}, the Chinese Pulsar Timing Array (CPTA) \cite{Xu:2023wog}, the European Pulsar Timing Array (EPTA) \cite{Antoniadis:2023lym,Antoniadis:2023ott}, and the Parkes Pulsar Timing Array (PPTA) \cite{Zic:2023gta,Reardon:2023gzh}. We want to investigate alternatives to the astrophysical explanation, which proposes that the source of the SGWB is inspiraling supermassive black hole binaries (SMBHBs) \citep{Rajagopal:1995,Jaffe:2002rt,Burke-Spolaor:2018bvk} described by a power-law of $f^{13/3}$ \cite{Phinney:2001di}. 
 
-Primordial gravitational waves generated during cosmic inflation, freely propagating in the radiation-dominated plasma, are predicted by theory. It is possible that the signatures of these waves we detect could differ from what we expect based on GR. In fact, there is a possibility that the propagation of these primordial gravitational waves could be modified by alternate theories of gravity, including massive gravity (MG), first introduced by Fierz and Pauli in 1939 \cite{Fierz:1939ix}. 
+However, more exotic, cosmological origins of the SGWB have not been ruled out  \citep{Maggiore:1999vm, Caprini:2018mtu, Chen:2021wdo, Wu:2021kmd, Chen:2021ncc, PPTA:2022eul, Wu:2023pbt, Wu:2023dnp, Madge:2023cak}, due to a discrepancy between the power-law of SMBHBs and the actual signal. Such cosmological explanations for the source include  cosmic strings \cite{Damour:2004kw,Siemens:2006yp, Chen:2022azo,Bian:2022tju}, domain walls \cite{Ferreira:2022zzo}, first-order phase transitions in the early universe \cite{Kibble:1976sj, Vilenkin:1984ib,Caprini:2010xv, Kobakhidze:2017mru, Arunasalam:2017ajm, Xue:2021gyq, NANOGrav:2021flc, Moore:2021ibq, Addazi:2023jvg, Athron:2023xlk, Bringmann:2023opz}, primordial gravitational waves \cite{Grishchuk:1976, Grishchuk:1977zz, Starobinsky:1980te, Linde:1981mu, Fabbri:1983us, Grishchuk:2005qe, Lasky:2015lej}, and scalar-induced gravitational waves \cite{Tomita:1967non, Saito:2008jc, Young:2014ana, Yuan:2019udt, Yuan:2019wwo, Chen:2019xse, Cai:2019bmk, Yuan:2019fwv, Liu:2021jnw, Liu:2023ymk, Cai:2023dls} generated by primordial black holes \cite{Zeldovich:1967lct,Hawking:1971ei,Carr:1974nx,Chen:2018czv,Chen:2018rzo,Liu:2018ess,Liu:2019rnx,Chen:2019irf,Liu:2020cds,Wu:2020drm,Chen:2021nxo,Chen:2022fda,Chen:2022qvg,Liu:2022iuf,Zheng:2022wqo} formed by scalar-tensor inflation. The NANOGrav and EPTA collaborations have considered some of these aforementioned new physics sources \cite{Afzal:2023, Antoniadis:2023xlr}. In this paper, we consider the primordial gravitational wave hypothesis with the amplification due to massive gravity.
 
-Since then, many attempts have been made to construct a consistent non-linear theory of MG. Any purely linear theory suffers from the van Dam-Veltman-Zakharov (vDVZ) discontinuity \cite{vanDam:1970vg,Zakharov:1970cc}, which prevents the theory from reducing to GR in the massless limit. Attempts have been made to address this, like the nonlinear extensions to the Fierz-Pauli theory that exhibit the Vainshtein mechanism \cite{Vainshtein:1972sx}. This has its own set of problems, like the Boulware-Deser ghost and other ghost degrees of freedom \cite{Boulware:1972yco,Dubovsky:2004sg}. This presents a significant obstacle for trying to come up with a consistent theory.
+Primordial gravitational waves generated during cosmic inflation, freely propagating in the radiation-dominated plasma, are predicted by theory \cite{Grishchuk:1976, Grishchuk:1977zz, Starobinsky:1980te, Linde:1981mu, Fabbri:1983us}. It is possible that the signatures of these waves we detect could differ from what we expect based on GR. In fact, there is a possibility that the propagation of these primordial gravitational waves could be modified by alternate theories of gravity, including massive gravity (MG), first introduced by Fierz and Pauli in 1939 \cite{Fierz:1939ix}. 
 
-Recently, attempts have been made to provide ghost-free nonlinear MG theories, such as the deRham-Gabadaze-Tolley (dRGT) theory \cite{Hassan:2012a, Hassan:2012b, deRham:2010ik,deRham:2010kj}. An alternative approach is to do away with Lorentz invariance, allowing gravitons to form a 3D rotation group, e.g. \cite{Arkani-Hamed:2003pdi, Rubakov:2004eb, Dubovsky:2004sg, Blas:2009my, Rubakov:2008nh, Blas:2007zz, Comelli:2013txa, Langlois:2014jba}. This no longer requires the theory to have five degrees of freedom, and one such model has been proposed on these grounds: the minimal theory of massive gravity (MTMG) \cite{DeFelice:2016, Felice:2016}. This has two propagating degrees of freedom, just like in GR, and this is the model we will consider in this paper. Another benefit of this model is that we won't have to consider the Higuchi bound, which ordinarily requires that the ratio of the mass of the graviton to the Hubble scale of inflation be up to an order of unity.
+Since then, many attempts have been made to construct a consistent non-linear theory of MG. Any purely linear theory suffers from the van Dam-Veltman-Zakharov (vDVZ) discontinuity \cite{vanDam:1970vg,Zakharov:1970cc}, which prevents the theory from reducing to GR in the massless limit. Attempts have been made to address this, like the nonlinear extensions to the Fierz-Pauli theory that exhibit thed Vainshtein mechanism \cite{Vainshtein:1972sx}. This has its own set of problems, like the Boulware-Deser ghost and other ghost degrees of freedom \cite{Boulware:1972yco,Dubovsky:2004sg}. This presents a significant obstacle for trying to come up with a consistent theory.
 
-In this paper, we will consider a time-dependent MTMG model of massive gravity, specifically one in which the graviton mass is a step-function of time as described in Ref.\ \cite{Fujita:2018} (hereafter the Step Function Mass (SFM) model). We will calculate the energy density of primordial gravitational waves created during inflation, at the present time, in the presence of massive gravity and compare it to the signals we observed in the 15-year NANOGrav data set (hereafter NG15). The goal of this paper is to show whether massive gravity, through the amplification of tensor modes of primordial gravitational waves that entered the cosmological horizon before the matter dominated era, is able to reproduce the observed SGWB.
+Recently, attempts have been made to provide ghost-free nonlinear MG theories, such as the deRham-Gabadaze-Tolley (dRGT) theory \cite{Hassan:2011tf, Hassan:2011ea, deRham:2010ik,deRham:2010kj}. An alternative approach is to do away with Lorentz invariance, allowing gravitons to form a 3D rotation group, e.g. \cite{Arkani-Hamed:2003pdi, Rubakov:2004eb, Dubovsky:2004sg, Blas:2009my, Rubakov:2008nh, Blas:2007zz, Comelli:2013txa, Langlois:2014jba}. This no longer requires the theory to have five degrees of freedom, and one such model has been proposed on these grounds: the minimal theory of massive gravity (MTMG) \cite{DeFelice:2015hla, DeFelice:2015moy}. This has two propagating degrees of freedom, just like in GR, and this is the model we will consider in this paper. Another benefit of this model is that we won't have to consider the Higuchi bound, which ordinarily requires that the ratio of the mass of the graviton to the Hubble scale of inflation be up to an order of unity.
 
-The paper is arranged as follows: in section \ref{sec:setup}, we introduce the model and the assumptions we make. In section \ref{sec:energy}, we derive the energy density and discuss its behavior. In section \ref{sec:results}, we compare the model to the signals detected by NANOGrav. In section \ref{sec:discussion}, we discuss the implications of our findings and discuss future work. Throughout this paper, we use  (--,+,+,+) for the Minkowski metric and we use natural units and set $c = \hbar = k_B = 1$. We also set the present day Hubble parameter $H_0 = h_0\ 100 \km \s^{-1}\Mpc^{-1} = 67.66 \km \s^{-1}\Mpc^{-1}$ and the present day density parameters for radiation, matter, curvature, and dark energy $\{\Omega_r, \Omega_m, \Omega_k, \Omega_\Lambda\} = \{9.182\times10^{-5},0.3111,0,0.6889\}$ to match the latest \textit{Planck} 2018 TT, TE, EE + lowE + lensing + BAO data \cite{Planck:2020}.
+In this paper, we will consider a time-dependent MTMG model of massive gravity, specifically one in which the graviton mass is a step-function of time as described in Ref.\ \cite{Fujita:2018ehq} (hereafter the Step Function Mass (SFM) model). We will calculate the energy density of primordial gravitational waves created during inflation, at the present time, in the presence of massive gravity and compare it to the signals we observed in the 15-year NANOGrav data set (hereafter NG15). The goal of this paper is to show whether massive gravity, through the amplification of tensor modes of primordial gravitational waves that entered the cosmological horizon before the matter dominated era, is able to reproduce the observed SGWB.
+
+The paper is arranged as follows: in section \ref{sec:setup}, we introduce the model and the assumptions we make. In section \ref{sec:energy}, we derive the energy density and discuss its behavior. In section \ref{sec:results}, we compare the model to the signals detected by NANOGrav. In section \ref{sec:discussion}, we discuss the implications of our findings and discuss future work. Throughout this paper, we use  (--,+,+,+) for the Minkowski metric and we use natural units and set $c = \hbar = k_B = 1$. We also set the present day Hubble parameter $H_0 = h_0\ 100 \km \s^{-1}\Mpc^{-1} = 67.66 \km \s^{-1}\Mpc^{-1}$ and the present day density parameters for radiation, matter, curvature, and dark energy $\{\Omega_r, \Omega_m, \Omega_k, \Omega_\Lambda\} = \{9.182\times10^{-5},0.3111,0,0.6889\}$ to match the latest \textit{Planck} 2018 TT, TE, EE + lowE + lensing + BAO data \cite{Planck:2018vyg}.
 
 \section{Setup}\label{sec:setup}
 We start with defining the Friedman-Lema\^{\i}tre-Walker (FLRW) metric $g_{\mu\nu}$:
 \begin{equation}\label{eqn:metric}
     g_{\mu\nu}dx^{\mu} dx^{\nu} = -N^2(t)dt^2 +a^2(t)\left(\frac{dr}{1-Kr^2} + r^2 d\Omega^2\right)\ ,
 \end{equation}
-where $K$ is the spatial curvature, $d\Omega^2 = d\theta^2 + \sin^2\theta d\phi^2$, $N(t)$ is the lapse, and $a(t)$ is the scale factor of the universe. In $d\Omega^2$, $\theta$ and $\phi$ are the polar and azimuthal angles in spherical coordinates, respectively. We then consider the general Lorentz-invariant action for a massive spin-2 field \cite{Blasi:2017}
+where $K$ is the spatial curvature, $d\Omega^2 = d\theta^2 + \sin^2\theta d\phi^2$, $N(t)$ is the lapse, and $a(t)$ is the scale factor of the universe. In $d\Omega^2$, $\theta$ and $\phi$ are the polar and azimuthal angles in spherical coordinates, respectively. We then consider the general Lorentz-invariant action for a massive spin-2 field \cite{Blasi:2017pkk}
 \begin{equation}\label{eqn:action}
     S = S_{\inv} + S_{m}
 \end{equation}
@@ -486,7 +487,7 @@ where $h_{\mu\nu} = h_{\mu\nu}(\tau,{\bf x})$ is the metric perturbation defined
      S_m = \int d^4x\frac{1}{2}(m_1^2 h^{\mu\nu}h_{\mu\nu}+ m_2^2 h^2)\ ,
     \end{multlined}
 \end{equation}
-where $m_1$ and $m_2$ are the mass terms defined in Eq.\ 2.3 of Ref.\ \cite{Blasi:2017}. We have two mass terms because we are only considering the linear level. To get rid of the Boulware-Deser ghost degree of freedom, we make the Fierz-Pauli choice and set $m_1^2 = -m_2^2$. We will define $M_\text{GW}^2 = m_1^2$ as the mass of the graviton. We decompose the spatial component of the tensor perturbation $h_{ij}$ into its helicity states like Eq.\ 19.214 of Ref.\ \cite{Maggiore:v2} 
+where $m_1$ and $m_2$ are the mass terms defined in Eq.\ 2.3 of Ref.\ \cite{Blasi:2017pkk}. We have two mass terms because we are only considering the linear level. To get rid of the Boulware-Deser ghost degree of freedom, we make the Fierz-Pauli choice and set $m_1^2 = -m_2^2$. We will define $M_\text{GW}^2 = m_1^2$ as the mass of the graviton. We decompose the spatial component of the tensor perturbation $h_{ij}$ into its helicity states like Eq.\ 19.214 of Ref.\ \cite{Maggiore:v2} 
 \begin{equation}\label{eqn:decomp}
     h_{ij}(\tau, {\bf k}) = \sum_{\lambda \in \{+, \times\}}e^\lambda_{ij}(\hat{\bf k})h_k^\lambda(\tau, {\bf k})
 \end{equation}
@@ -499,7 +500,7 @@ where ${\bf k}$ is the comoving momentum, $e^\lambda_{ij}$ are the polarization 
 \begin{equation}\label{eqn:eom}
     \overline{h}_k'' + \left(c_g^2(\tau) k^2 + a^2 M_\text{GW}^2 - \frac{a''}{a} + 2Kc_g^2(\tau)\right)\overline{h}_k = 0
 \end{equation}
-where $a$ is the scale factor, $\overline{h}_k = ah_k$ is defined for convenience, the primes ($\,'$) denote derivatives with respect to $\tau$, and $c_g(\tau)$ is the effective sound speed associated with GWs and may be dependent on time. For this paper, we will set $K = 0$ and $c_g = 1$\footnote{Refer to Sec.\ B2 of Ref.\ \cite{Gumrukcuoglu:2012} for consideration of non-zero $K$ and Sec.\ IV E4 of Ref.\ \cite{Gumrukcuoglu:2012} for consideration of general $c_g$.}.
+where $a$ is the scale factor, $\overline{h}_k = ah_k$ is defined for convenience, the primes ($\,'$) denote derivatives with respect to $\tau$, and $c_g(\tau)$ is the effective sound speed associated with GWs and may be dependent on time. For this paper, we will set $K = 0$ and $c_g = 1$\footnote{Refer to Sec.\ B2 of Ref.\ \cite{Gumrukcuoglu:2012wt} for consideration of non-zero $K$ and Sec.\ IV E4 of Ref.\ \cite{Gumrukcuoglu:2012wt} for consideration of general $c_g$.}.
 
 \begin{figure}[ht]
     \includegraphics[scale=0.65]{fig/fig0.pdf}
@@ -508,7 +509,7 @@ where $a$ is the scale factor, $\overline{h}_k = ah_k$ is defined for convenienc
 \end{figure}
 
 We consider graviton masses on the order of the Hubble scale, and so the evolution of the GWs during inflation will be important.
-The scale factor, as described in Eq.\ (4) of Ref.\ \cite{Fujita:2018}, is
+The scale factor, as described in Eq.\ (4) of Ref.\ \cite{Fujita:2018ehq}, is
 \begin{equation}\label{eqn:scale_fac}
     a(\tau) = 
     \begin{cases}
@@ -516,9 +517,9 @@ The scale factor, as described in Eq.\ (4) of Ref.\ \cite{Fujita:2018}, is
         a_r \tau/\tau_r & \tau > \tau_r \\
    \end{cases}
 \end{equation}
-where $H_{\inf}$ is the Hubble parameter during inflation when the scale corresponding to the Cosmic Microwave Background exits the Hubble horizon and $a_r$ is the scale factor at the reheating time $\tau_r = 1/(a_r H_{\inf})$. We will assume $\tau_r$ to be fixed in this discussion, while $H_{\inf}$ and $a_r$ may vary. The bounds on $H_{\inf}$ are discussed in Ref.\ \cite{Jiang:2017}, and they will be respected in this paper. The scale factor in this model has a peculiar behavior where it is not defined in the region $(-\tau_r, \tau_r)$ and only takes values outside of that interval. This is to allow for the scale factor and its first derivative to be continuous and to avoid the singularity at $\tau = 0$. % perhaps expalin more about this weird behavior of the conformal time during inflation 
-Fig.\ \ref{fig:mode} illustrates how a generic mode function would look like, showing  the discontinuity in the conformal time. The behavior in the three regions of $\tau$ are discussed in detail in Ref.\ \cite{Fujita:2018}.
-We will use the mass function from Eq.\ 5 of Ref.\ \cite{Fujita:2018}
+where $H_{\inf}$ is the Hubble parameter during inflation when the scale corresponding to the Cosmic Microwave Background exits the Hubble horizon and $a_r$ is the scale factor at the reheating time $\tau_r = 1/(a_r H_{\inf})$. We will assume $\tau_r$ to be fixed in this discussion, while $H_{\inf}$ and $a_r$ may vary. The bounds on $H_{\inf}$ are discussed in Ref.\ \cite{Jiang:2015qor}, and they will be respected in this paper. The scale factor in this model has a peculiar behavior where it is not defined in the region $(-\tau_r, \tau_r)$ and only takes values outside of that interval. This is to allow for the scale factor and its first derivative to be continuous and to avoid the singularity at $\tau = 0$. % perhaps expalin more about this weird behavior of the conformal time during inflation 
+Fig.\ \ref{fig:mode} illustrates how a generic mode function would look like, showing  the discontinuity in the conformal time. The behavior in the three regions of $\tau$ are discussed in detail in Ref.\ \cite{Fujita:2018ehq}.
+We will use the mass function from Eq.\ 5 of Ref.\ \cite{Fujita:2018ehq}
 \begin{equation}\label{eqn:mass_case}
     M_\text{GW}(\tau) = 
     \begin{cases}
@@ -526,7 +527,7 @@ We will use the mass function from Eq.\ 5 of Ref.\ \cite{Fujita:2018}
         0 & \tau > \tau_m
    \end{cases}
 \end{equation} 
-where $\tau_m$ is some conformal time during the radiation dominated era when the mass instantaneously drops to 0. For more discussion about why the time is chosen to be in the radiation dominated era, refer to Footnote 2 of Ref.\ \cite{Fujita:2018}. 
+where $\tau_m$ is some conformal time during the radiation dominated era when the mass instantaneously drops to 0. For more discussion about why the time is chosen to be in the radiation dominated era, refer to Footnote 2 of Ref.\ \cite{Fujita:2018ehq}. 
 
 \section{Energy Density of gravitational waves}\label{sec:energy}
 When we study models of gravitation, we often want to know how sub-horizon GWs from the primordial era are influenced. The energy density spectrum of these GWs at the present time as a function of frequency is perhaps the most practical way to observe the effects of beyond-GR theories. We want to look at the energy fraction of the GWs per logarithmic interval of k at the current time. We have the following definition for the energy density 
@@ -539,7 +540,7 @@ where $\rho_c = 3H^2/8\pi G$ is the critical density, and we note that the deriv
 \end{equation}
 where $a_0 = a(\tau_0) = 1$. We will find the power spectrum in MG by finding the form of the enhancement factor that will amplify the GR power spectrum.  
 
-We take the power spectrum from Eq.\ 14 of Ref.\ \cite{Fujita:2018}
+We take the power spectrum from Eq.\ 14 of Ref.\ \cite{Fujita:2018ehq}
 \begin{equation}\label{eqn:p_sfm}
     \mathcal{P}(\tau, k) \sim \frac{\tau_m}{\tau_r}(k\tau_r)^{3-2\nu}\mathcal{P}_{GR}(\tau,k)\ , 
 \end{equation}
@@ -547,29 +548,26 @@ We take the power spectrum from Eq.\ 14 of Ref.\ \cite{Fujita:2018}
 \begin{equation}\label{eqn:nu}
     \nu = \sqrt{\frac{9}{4} - \frac{m^2}{H_{\inf}^2}}\ .
 \end{equation}
-This expression for the power spectrum is found by solving the equation of motion for the mode function and finding the expression for $\overline{h}_k$ deep in the massless phase (see Sec.\ III(iii) of Ref.\ \cite{Fujita:2018} for more details). As for the GR power spectrum, we can approximate it by using the transfer function detailed in Ref.\ \cite{Kuroyanagi:2015}. To briefly recount, the power spectrum in the GR case is 
+This expression for the power spectrum is found by solving the equation of motion for the mode function and finding the expression for $\overline{h}_k$ deep in the massless phase (see Sec.\ III(iii) of Ref.\ \cite{Fujita:2018ehq} for more details). As for the GR power spectrum, we can approximate it by using the transfer function detailed in Ref.\ \cite{Kuroyanagi:2014nba}. To briefly recount, the power spectrum in the GR case is 
 \begin{equation}\label{eqn:p_gr_sfm}
     \mathcal{P}_{GR} = \mathcal{P}^{\text{prim}}_{T} T^2_T(k)
 \end{equation}
 where $\mathcal{P}^{\text{prim}}_{T}$ is the primordial tensor power spectrum 
-and $T_{T}$ is the transfer function describing the standard reheating scenario in which the universe had a short matter-dominated era after inflation before reheating ended. $\mathcal{P}^{\text{prim}}_{T}$ is defined in Eq.\ 7 of Ref.\ \cite{Kuroyanagi:2015} as follows
+and $T_{T}$ is the transfer function describing the standard reheating scenario in which the universe had a short matter-dominated era after inflation before reheating ended. $\mathcal{P}^{\text{prim}}_{T}$ is defined in Eq.\ 7 of Ref.\ \cite{Kuroyanagi:2014nba} as follows
 \begin{equation}\label{eqn:pt}
     \mathcal{P}_{T}^{\text{prim}}(k) = A_T(k_{\text{ref}})\left(\frac{k}{k_{\text{ref}}}\right)^{n_T}
 \end{equation}
 where $A_T(k_{\text{ref}})$ is the amplitude at the reference scale,
-\hspace{-1em}measured to be precisely $4.4\times 10^{10}$, and $n_T$ is the spectral index chosen to be 0. The reference scale $k_{\text{ref}}$ is chosen to be 0.01 Mpc$\/^{-1}$. $T_{T}$ is defined in Eq.\ 12 of Ref.\ \cite{Kuroyanagi:2015} in the following way
+\hspace{-1em}measured to be precisely $4.4\times 10^{10}$, and $n_T$ is the spectral index chosen to be 0. The reference scale $k_{\text{ref}}$ is chosen to be 0.01 Mpc$\/^{-1}$. $T_{T}$ is defined in Eq.\ 12 of Ref.\ \cite{Kuroyanagi:2014nba} in the following way
 \begin{equation}\label{eqn:tt}
     T_T^2(k) = \Omega_m^2 \frac{g_*(T_\text{in})}{g_{*0}} \frac{g_{*s0}^{4/3}}{g_{*s}^{4/3}(T_{\text{in}})} \frac{9j_1^2(k\tau_0)}{(k\tau_0)^2}T_1^2(x_{\text{eq}}) T_2^2(x_R)
 \end{equation}
-where $g_{*}(T_\text{in})$ and $g_{*0}$ are the relativistic degrees of freedom at the inflation temperature scale and the present respectively, $g_{*s}(T_\text{in})$ and $g_{*s0}$ are their counterparts for entropy, $j_1(k\tau_0)$ is the 1st spherical Bessel function whose approximation $j_1(k\tau_0) \simeq 1/(\sqrt{2}k\tau_0)$ will be used, the fitting functions are empirically found to be $T_1^2(x) = 1+1.57x+3.42x^2$ and $T_2^2(x) = (1-0.22x^{1.5} + 0.65x^2)^{-1}$, and $x_i \equiv k/k_i$. The values for all of the constants and the forms of the functions are taken from Sec. 2.1 of Ref.\ \cite{Kuroyanagi:2015}. 
+where $g_{*}(T_\text{in})$ and $g_{*0}$ are the relativistic degrees of freedom at the inflation temperature scale and the present respectively, $g_{*s}(T_\text{in})$ and $g_{*s0}$ are their counterparts for entropy, $j_1(k\tau_0)$ is the 1st spherical Bessel function whose approximation $j_1(k\tau_0) \simeq 1/(\sqrt{2}k\tau_0)$ will be used, the fitting functions are empirically found to be $T_1^2(x) = 1+1.57x+3.42x^2$ and $T_2^2(x) = (1-0.22x^{1.5} + 0.65x^2)^{-1}$, and $x_i \equiv k/k_i$. The values for all of the constants and the forms of the functions are taken from Sec. 2.1 of Ref.\ \cite{Kuroyanagi:2014nba}. 
 Since we are interested in the energy density at the present, we consider $\Omega_{\text{GW},0}(f) = \Omega_\text{GW}(\tau_0,f)$
 \begin{equation}\label{eqn:om_gw_0}
     \Omega_{\text{GW},0}(f) = \frac{\pi^2f^2}{3a_0^2 H_0^2}\frac{\tau_m}{\tau_r}(k\tau_r)^{3-2\nu}\mathcal{P}_{GR}(k) .
 \end{equation}
-In anticipation of our consideration of certain parameters in the next section, we look at the behavior of the energy density as a function of different parameters. Fig.\ \ref{fig:contours} shows how $\Omega_{\text{GW},0}$ varies with changing $f$ and $M_\text{GW}, \tau_m$, and $H_{\inf}$. We note that in Fig.\ \ref{fig:contours} for the topmost and bottommost plots where we are not varying $\tau_m$, we are taking the upper bound of $\tau_m$, which is determined by the Big Bang Nucleosynthesis (BBN) bounds and is given by Eq.\ 16 of Ref.\ \cite{Fujita:2018}
-\begin{equation}\label{eqn:tau_m_bbn}
-    \tau_m \lesssim 10^{10}\left(\frac{H_{\inf}}{10^{14} \GeV}\right)^{-2}\tau_r .
-\end{equation}
+In anticipation of our consideration of certain parameters in the next section, we look at the behavior of the energy density as a function of different parameters. Fig.\ \ref{fig:contours}
 \begin{figure}
 \begin{subfigure}{.5\textwidth}
   \centering
@@ -586,19 +584,25 @@ In anticipation of our consideration of certain parameters in the next section, 
   \includegraphics[width=.82\linewidth]{fig/fig4c.pdf}  
   \label{fig:contour-c}
 \end{subfigure}
-\caption{We plot $\Omega_{\text{GW},0}$ as a function of $f$ and $M$ (top), $\tau_m$ (middle), and $H_{\inf}$ (bottom). The frequency ranges from the scale corresponding to matter-radiation inequality ($\sim 3\times10^{-16}$ Hz) to the inflationary UV cutoff ($\sim 2\times 10^8\left(\frac{H_{\inf}}{10^{14} \GeV}\right)^{1/2}$ Hz \cite{Fujita:2018}).} 
+\caption{We plot $\Omega_{\text{GW},0}$ as a function of $f$ and $M$ (top), $\tau_m$ (middle), and $H_{\inf}$ (bottom). The frequency ranges from the scale corresponding to matter-radiation inequality ($\sim 3\times10^{-16}$ Hz) to the inflationary UV cutoff ($\sim 2\times 10^8\left(\frac{H_{\inf}}{10^{14} \GeV}\right)^{1/2}$ Hz \cite{Fujita:2018ehq}).} 
 \label{fig:contours}
 \end{figure}
+shows how $\Omega_{\text{GW},0}$ varies with changing $f$ and $M_\text{GW}, \tau_m$, and $H_{\inf}$. We note that in Fig.\ \ref{fig:contours} for the topmost and bottommost plots where we are not varying $\tau_m$, we are taking the upper bound of $\tau_m$, which is determined by the Big Bang Nucleosynthesis (BBN) bounds and is given by Eq.\ 16 of Ref.\ \cite{Fujita:2018ehq}
+\begin{equation}\label{eqn:tau_m_bbn}
+    \tau_m \lesssim 10^{10}\left(\frac{H_{\inf}}{10^{14} \GeV}\right)^{-2}\tau_r .
+\end{equation}
 
 \section{Results}\label{sec:results}
-We now discuss the region of the parameter space that can potentially explain the signals from NG15. The constraints we can place on the SFM model based on NG15 are done by seeing how we can change the parameters $M_\text{GW}, H_{\inf},$ and $\tau_m$ to fit the signal. Our initial approach of fixing $H_{\inf}$ to $10^8 \GeV$, like in Ref.\ \cite{Fujita:2018} and letting $m$ and $\tau_m$ vary didn't produce any gravitational wave energy density from inflation that could possibly reproduce NG15. We see in the middle plot of Fig.\ \ref{fig:contours} that increasing $\tau_m$ uniformly increases the primordial energy density. We found that that we have to set $\tau_m$ to its maximum allowed value by the BBN bound, as described by Eq.\ \ref{eqn:tau_m_bbn} in order to be able to reproduce the NG15 signal.
+We now discuss the region of the parameter space that can potentially explain the signals from NG15. The constraints we can place on the SFM model based on NG15 are done by seeing how we can change the parameters $M_\text{GW}, H_{\inf},$ and $\tau_m$ to fit the signal. Our initial approach of fixing $H_{\inf}$ to $10^8 \GeV$, like in Ref.\ \cite{Fujita:2018ehq} and letting $m$ and $\tau_m$ vary didn't produce any gravitational wave energy density from inflation that could possibly reproduce NG15. We see in the middle plot of Fig.\ \ref{fig:contours} that increasing $\tau_m$ uniformly increases the primordial energy density. We found that that we have to set $\tau_m$ to its maximum allowed value by the BBN bound, as described by Eq.\ \ref{eqn:tau_m_bbn} in order to be able to reproduce the NG15 signal.
 
-By varying the other two parameters, $M_{\text{GW}}$ and $H_{\inf}$, we found resulting energy densities that lie within $1\sigma$, $2\sigma$, and $3\sigma$ of the power law posterior of the signal. Our values for the parameters were $M_\text{GW} = 1.298H_{\inf}$ and $H_{\inf} = 0.47 \GeV$ to stay within $1\sigma$ of the posterior, $M_\text{GW} = 1.251H_{\inf}$ and $H_{\inf} = 5.2 \GeV$ to stay within $2\sigma$ of the posterior $M_\text{GW} = 1.201H_{\inf}$ and $H_{\inf} = 50.0 \GeV$ to stay within $3\sigma$ of the posterior. There are other combinations for the values of $M_GW$ and $H_{\inf}$ if we assume the graviton mass cuts off at an earlier time, but these are the values that we found to violate the BBN limits the least. 
 \begin{figure}[ht]
     \includegraphics[width=\linewidth]{fig/fig9.pdf}
     \caption{Posterior probability distribution of the GWB amplitude and spectral index for the NANOGrav data (orange). The value $\gamma_\text{GW}$ = 13/3 (dashed black line) represents the expected SMBHB spectrum. The amplitude is referenced to $f_{\text ref}$ = 1 yr$^{-1}$. The red, blue, and green curves represent the GWB spectra fitted to the $1\sigma$, $2\sigma$, and $3\sigma$ posterior of the signal.}
     \label{fig:amp_spec}
 \end{figure}
+
+By varying the other two parameters, $M_{\text{GW}}$ and $H_{\inf}$, we found resulting energy densities that lie within $1\sigma$, $2\sigma$, and $3\sigma$ of the power law posterior of the signal. Our values for the parameters were $M_\text{GW} = 1.298H_{\inf}$ and $H_{\inf} = 0.47 \GeV$ to stay within $1\sigma$ of the posterior, $M_\text{GW} = 1.251H_{\inf}$ and $H_{\inf} = 5.2 \GeV$ to stay within $2\sigma$ 
+
 \onecolumngrid
 \begin{figure*}
 \includegraphics[width=\textwidth]{fig/fig8.pdf} 
@@ -607,18 +611,24 @@ By varying the other two parameters, $M_{\text{GW}}$ and $H_{\inf}$, we found re
 \end{figure*}
 \twocolumngrid
 
-$\,$
-~\\ ~\\
-\section{Discussion}\label{sec:discussion}
+of the posterior $M_\text{GW} = 1.201H_{\inf}$ and $H_{\inf} = 50.0 \GeV$ to stay within $3\sigma$ of the posterior. There are other combinations for the values of $M_GW$ and $H_{\inf}$ if we assume the graviton mass cuts off at an earlier time, but these are the values that we found to violate the BBN limits the least. 
 
-In this paper, we discussed how the constant mass and step function mass models of massive gravity can be constrained by the 15-year NANOGrav data set. We note that the selection of the parameters in the step function mass model leads to energy densities that violate the BBN bound for higher frequencies, specifically in the region of frequencies $\gtrsim 10^{-6}$ Hz. We propose that there could be some mechanism that suppresses the energy density of gravitational waves from the primordial era for those frequencies. A mechanism analogous to the damping of the energy density from the free-streaming neutrinos \cite{Weinberg:2004} could be behind such a suppression necessary to obey the BBN bound. 
 
-Observations of gravitational waves have mostly ruled out the possibility of gravitons with a very low but nonzero mass, since the expectation that a peak could be present for lower and lower frequencies is becoming slim, albeit still possible. Therefore, the more plausible possibility of massive gravity is the scenario in which the graviton mass is a non-constant function of time. We have only considered a step function as the time dependent function, but more complicated functions are possible. The mechanism behind such a mass decay would come from the exact nature of the phase transition of the gravitational field. It may be interesting to pursue an investigation to place constraints on the specific evolution of the mass during the phase transition. Then, we would be able to probe the mass evolution and shed insight into the time dependent behavior beyond a step function. 
+
 \begin{figure}[ht]
     \includegraphics[width=\linewidth]{fig/fig7.pdf}
     \caption{The energy densities in Fig.\ \ref{fig:GWB} plotted over the whole frequency range specified in Fig.\ \ref{fig:contours}. The red, blue, and green curves correspond to the energy densities of the same color in Fig.\ \ref{fig:GWB}. The turquoise curve below the energy densities is the sensitivity curve for NANOGrav. The suppression takes place right before the energy density surpasses the BBN bound.}
     \label{fig:supp}
 \end{figure}
+
+$\,$
+\section{Discussion}\label{sec:discussion}
+In this paper, we discussed how the constant mass and step function mass models of massive gravity can be constrained by the 15-year NANOGrav data set. We note that the selection of the parameters in the step function mass model leads to energy densities that violate the BBN bound for higher frequencies, specifically in the region of frequencies $\gtrsim 10^{-6}$ Hz. We propose that there could be some mechanism that suppresses the energy density of gravitational waves from the primordial era for those frequencies. A mechanism analogous to the damping of the energy density from the free-streaming neutrinos \cite{Weinberg:2003ur} could be behind such a suppression necessary to obey the BBN bound. 
+
+
+
+Observations of gravitational waves have mostly ruled out the possibility of gravitons with a very low but nonzero mass, since the expectation that a peak could be present for lower and lower frequencies is becoming slim, albeit still possible. Therefore, the more plausible possibility of massive gravity is the scenario in which the graviton mass is a non-constant function of time. We have only considered a step function as the time dependent function, but more complicated functions are possible. The mechanism behind such a mass decay would come from the exact nature of the phase transition of the gravitational field. It may be interesting to pursue an investigation to place constraints on the specific evolution of the mass during the phase transition. Then, we would be able to probe the mass evolution and shed insight into the time dependent behavior beyond a step function. 
+
 
 Additionally, further observations that place constraints on the Hubble rate of expansion, the scale factor, and the time associated with inflation would be able to refute or confirm our theory. Another limitation comes from the fact that the BBN bound is defined in terms of a logarithmic integral of the whole frequency interval of the energy density. The suppression we propose is flat in the log-log scale, which would lead to a non-trivial bound from BBN. In addition to signals we have already observed with interferometers, we expect a more drastic suppression for higher frequencies than we discuss. Future work may investigate the nature of this suppression and propose plausible mechanisms for it.
 
